--- a/people.html
+++ b/people.html
@@ -21,40 +21,7 @@
 
 
 <body>
-  <!-- header top area start -->
-  <div class="header-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center">
-          <div class="contact-info">
-            <ul class="list-unstyled">
-              <li><a href="mailto:info@example.com"><i class="fas fa-envelope"></i> info@example.com</a></li>
-              <li><a href="tel:1-888-452-1505"><i class="fas fa-phone-alt"></i> 1-888-452-1505</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-6 align-self-center">
-          <div class="d-flex align-items-center justify-content-end">
-            <div class="social-icon text-end">
-              <ul class="list-unstyled">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-              </ul>
-            </div>
-            <div class="header_search">
-              <div class="input_groups position-relative">
-                <input type="text" placeholder="Search">
-                <button class="search_bar"><i class="fa fa-search"></i></button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- header top area end -->
+
   <!-- header area start -->
   <header class="header_area">
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
@@ -67,12 +34,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll">
+          <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us <i class="fas fa-chevron-down"></i></a>
+              <a class="nav-link active" href="#">About Us <i class="fas fa-chevron-down"></i></a>
               <ul class="list-unstyled sub-menu">
                 <li><a href="about.html">About</a></li>
                 <li><a href="founder-message.html">Message from the Founder</a></li>
@@ -88,6 +55,9 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="fas fa-search" style="font-size: 15px;"></i></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -99,7 +69,7 @@
   <!-- main area start -->
   <main>
     <!-- breadcrumb area start -->
-    <section class="breadcrumb_area">
+    <section class="breadcrumb_area" style="background: url(./images/breadcrumb.jpg);">
       <div class="container">
         <div class="text-center">
           <h1 class="title">People</h1>
@@ -571,9 +541,10 @@
                     </div>
                     <div class="text text-center">
                       <h4 class="title">Tom Butcher</h4>
-                      <span class="subtitle">Partner</span>
-                      <div class="mt-2">
-                        <h4 href="people-details.html" class="common_btn d-inline-block">View Profile</h4>
+                      <p class="subtitle">Partner</p>
+                      <p class="subtitle">Dhaka</p>
+                      <div class="mt-auto">
+                        <h4 href="people-details.html" class="view_profile"><span>View Profile</span> <i class="fa-solid fa-arrow-right-long"></i></h4>
                       </div>
                     </div>
                   </div>
@@ -588,8 +559,8 @@
                     <div class="text text-center">
                       <h4 class="title">Tom Butcher</h4>
                       <span class="subtitle">Partner</span>
-                      <div class="mt-2">
-                        <h4 href="people-details.html" class="common_btn d-inline-block">View Profile</h4>
+                      <div class="mt-auto">
+                        <h4 href="people-details.html" class="view_profile"><span>View Profile</span> <i class="fa-solid fa-arrow-right-long"></i></h4>
                       </div>
                     </div>
                   </div>
@@ -604,8 +575,8 @@
                     <div class="text text-center">
                       <h4 class="title">Tom Butcher</h4>
                       <span class="subtitle">Partner</span>
-                      <div class="mt-2">
-                        <h4 href="people-details.html" class="common_btn d-inline-block">View Profile</h4>
+                      <div class="mt-auto">
+                        <h4 href="people-details.html" class="view_profile"><span>View Profile</span> <i class="fa-solid fa-arrow-right-long"></i></h4>
                       </div>
                     </div>
                   </div>
@@ -620,8 +591,8 @@
                     <div class="text text-center">
                       <h4 class="title">Tom Butcher</h4>
                       <span class="subtitle">Partner</span>
-                      <div class="mt-2">
-                        <h4 href="people-details.html" class="common_btn d-inline-block">View Profile</h4>
+                      <div class="mt-auto">
+                        <h4 href="people-details.html" class="view_profile"><span>View Profile</span> <i class="fa-solid fa-arrow-right-long"></i></h4>
                       </div>
                     </div>
                   </div>
@@ -636,8 +607,8 @@
                     <div class="text text-center">
                       <h4 class="title">Tom Butcher</h4>
                       <span class="subtitle">Partner</span>
-                      <div class="mt-2">
-                        <h4 href="people-details.html" class="common_btn d-inline-block">View Profile</h4>
+                      <div class="mt-auto">
+                        <h4 href="people-details.html" class="view_profile"><span>View Profile</span> <i class="fa-solid fa-arrow-right-long"></i></h4>
                       </div>
                     </div>
                   </div>
@@ -652,8 +623,8 @@
                     <div class="text text-center">
                       <h4 class="title">Tom Butcher</h4>
                       <span class="subtitle">Partner</span>
-                      <div class="mt-2">
-                        <h4 href="people-details.html" class="common_btn d-inline-block">View Profile</h4>
+                      <div class="mt-auto">
+                        <h4 href="people-details.html" class="view_profile"><span>View Profile</span> <i class="fa-solid fa-arrow-right-long"></i></h4>
                       </div>
                     </div>
                   </div>
@@ -668,8 +639,8 @@
                     <div class="text text-center">
                       <h4 class="title">Tom Butcher</h4>
                       <span class="subtitle">Partner</span>
-                      <div class="mt-2">
-                        <h4 href="people-details.html" class="common_btn d-inline-block">View Profile</h4>
+                      <div class="mt-auto">
+                        <h4 href="people-details.html" class="view_profile"><span>View Profile</span> <i class="fa-solid fa-arrow-right-long"></i></h4>
                       </div>
                     </div>
                   </div>
@@ -684,8 +655,8 @@
                     <div class="text text-center">
                       <h4 class="title">Tom Butcher</h4>
                       <span class="subtitle">Partner</span>
-                      <div class="mt-2">
-                        <h4 href="people-details.html" class="common_btn d-inline-block">View Profile</h4>
+                      <div class="mt-auto">
+                        <h4 href="people-details.html" class="view_profile"><span>View Profile</span> <i class="fa-solid fa-arrow-right-long"></i></h4>
                       </div>
                     </div>
                   </div>
@@ -800,7 +771,7 @@
             <div class="col-lg-12 align-self-center">
               <div class="copyright-text text-center">
                 <p>Copyright © 2024 | Farooq & Associates </p>
-                <p class="mt-2">Powered by <a href="#">Boomerang Digital</a></p>
+                <p class="mt-2">Powered by <a href="#">Nogor Solutions Limited</a></p>
               </div>
             </div>
           </div>
