--- a/projects.html
+++ b/projects.html
@@ -21,40 +21,7 @@
 
 
 <body>
-  <!-- header top area start -->
-  <div class="header-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center">
-          <div class="contact-info">
-            <ul class="list-unstyled">
-              <li><a href="mailto:info@example.com"><i class="fas fa-envelope"></i> info@example.com</a></li>
-              <li><a href="tel:1-888-452-1505"><i class="fas fa-phone-alt"></i> 1-888-452-1505</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-6 align-self-center">
-          <div class="d-flex align-items-center justify-content-end">
-            <div class="social-icon text-end">
-              <ul class="list-unstyled">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-              </ul>
-            </div>
-            <div class="header_search">
-              <div class="input_groups position-relative">
-                <input type="text" placeholder="Search">
-                <button class="search_bar"><i class="fa fa-search"></i></button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- header top area end -->
+
   <!-- header area start -->
   <header class="header_area">
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
@@ -67,9 +34,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll">
+          <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us <i class="fas fa-chevron-down"></i></a>
@@ -83,10 +50,13 @@
               <a class="nav-link" href="areas-of-practice.html">Areas of Practice </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link active" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="fas fa-search" style="font-size: 15px;"></i></a>
             </li>
           </ul>
         </div>
@@ -99,7 +69,7 @@
   <!-- main area start -->
   <main>
     <!-- breadcrumb area start -->
-    <section class="breadcrumb_area">
+    <section class="breadcrumb_area" style="background: url(./images/breadcrumb.jpg);">
       <div class="container">
         <div class="text-center">
           <h1 class="title">Projects</h1>
@@ -120,7 +90,55 @@
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
-                  <img src="images/pr-1.jpg" alt="pr-1" class="img-fluid w-100">
+                  <img src="images/project1.png" alt="pr-1" class="img-fluid w-100">
+                </div>
+                <div class="text">
+                  <h3 class="title">Dhaka MRT Line</h3>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="projects_item">
+              <a href="project-details.html" class="d-block w-100">
+                <div class="image">
+                  <img src="images/project2.png" alt="pr-2" class="img-fluid w-100">
+                </div>
+                <div class="text">
+                  <h3 class="title">Bay Terminal Project</h3>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="projects_item">
+              <a href="project-details.html" class="d-block w-100">
+                <div class="image">
+                  <img src="images/project3.png" alt="pr-3" class="img-fluid w-100">
+                </div>
+                <div class="text">
+                  <h3 class="title">Corporate and Finance Projects</h3>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="projects_item">
+              <a href="project-details.html" class="d-block w-100">
+                <div class="image">
+                  <img src="images/project4.jpg" alt="pr-4" class="img-fluid w-100">
+                </div>
+                <div class="text">
+                  <h3 class="title">First Dhaka Elevated Expressway Project</h3>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="projects_item">
+              <a href="project-details.html" class="d-block w-100">
+                <div class="image">
+                  <img src="images/project5.jpg" alt="pr-1" class="img-fluid w-100">
                 </div>
                 <div class="text">
                   <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
@@ -132,10 +150,10 @@
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
-                  <img src="images/pr-2.jpg" alt="pr-2" class="img-fluid w-100">
+                  <img src="images/project6.jpg" alt="pr-2" class="img-fluid w-100">
                 </div>
                 <div class="text">
-                  <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
+                  <h3 class="title">River-based Inland Container Port and Shipment Services</h3>
                 </div>
               </a>
             </div>
@@ -144,10 +162,10 @@
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
-                  <img src="images/pr-3.jpg" alt="pr-3" class="img-fluid w-100">
+                  <img src="images/project7.jpg" alt="pr-3" class="img-fluid w-100">
                 </div>
                 <div class="text">
-                  <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
+                  <h3 class="title">Coal Transshipment Terminal Project</h3>
                 </div>
               </a>
             </div>
@@ -156,10 +174,10 @@
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
-                  <img src="images/pr-4.png" alt="pr-4" class="img-fluid w-100">
+                  <img src="images/project8.png" alt="pr-4" class="img-fluid w-100">
                 </div>
                 <div class="text">
-                  <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
+                  <h3 class="title">Merger of Airtel Bangladesh Limited and Robi Axiata Limited</h3>
                 </div>
               </a>
             </div>
@@ -168,10 +186,10 @@
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
-                  <img src="images/pr-1.jpg" alt="pr-1" class="img-fluid w-100">
+                  <img src="images/project9.jpg" alt="pr-4" class="img-fluid w-100">
                 </div>
                 <div class="text">
-                  <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
+                  <h3 class="title">Khilkhet Water Treatment Plant</h3>
                 </div>
               </a>
             </div>
@@ -180,34 +198,10 @@
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
-                  <img src="images/pr-2.jpg" alt="pr-2" class="img-fluid w-100">
+                  <img src="images/project10.png" alt="pr-4" class="img-fluid w-100">
                 </div>
                 <div class="text">
-                  <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="projects_item">
-              <a href="project-details.html" class="d-block w-100">
-                <div class="image">
-                  <img src="images/pr-3.jpg" alt="pr-3" class="img-fluid w-100">
-                </div>
-                <div class="text">
-                  <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="projects_item">
-              <a href="project-details.html" class="d-block w-100">
-                <div class="image">
-                  <img src="images/pr-4.png" alt="pr-4" class="img-fluid w-100">
-                </div>
-                <div class="text">
-                  <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
+                  <h3 class="title">Power Projects</h3>
                 </div>
               </a>
             </div>
@@ -316,7 +310,7 @@
             <div class="col-lg-12 align-self-center">
               <div class="copyright-text text-center">
                 <p>Copyright © 2024 | Farooq & Associates </p>
-                <p class="mt-2">Powered by <a href="#">Boomerang Digital</a></p>
+                <p class="mt-2">Powered by <a href="#">Nogor Solutions Limited</a></p>
               </div>
             </div>
           </div>
