--- a/founder-message.html
+++ b/founder-message.html
@@ -21,40 +21,7 @@
 
 
 <body>
-  <!-- header top area start -->
-  <div class="header-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center">
-          <div class="contact-info">
-            <ul class="list-unstyled">
-              <li><a href="mailto:info@example.com"><i class="fas fa-envelope"></i> info@example.com</a></li>
-              <li><a href="tel:1-888-452-1505"><i class="fas fa-phone-alt"></i> 1-888-452-1505</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-6 align-self-center">
-          <div class="d-flex align-items-center justify-content-end">
-            <div class="social-icon text-end">
-              <ul class="list-unstyled">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-              </ul>
-            </div>
-            <div class="header_search">
-              <div class="input_groups position-relative">
-                <input type="text" placeholder="Search">
-                <button class="search_bar"><i class="fa fa-search"></i></button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- header top area end -->
+
   <!-- header area start -->
   <header class="header_area">
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
@@ -67,7 +34,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll">
+          <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
@@ -88,6 +55,9 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="fas fa-search" style="font-size: 15px;"></i></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -99,7 +69,7 @@
   <!-- main area start -->
   <main>
     <!-- breadcrumb area start -->
-    <section class="breadcrumb_area">
+    <section class="breadcrumb_area" style="background: url(./images/breadcrumb.jpg);">
       <div class="container">
         <div class="text-center">
           <h1 class="title">Founder Message</h1>
@@ -250,7 +220,7 @@
             <div class="col-lg-12 align-self-center">
               <div class="copyright-text text-center">
                 <p>Copyright © 2024 | Farooq & Associates </p>
-                <p class="mt-2">Powered by <a href="#">Boomerang Digital</a></p>
+                <p class="mt-2">Powered by <a href="#">Nogor Solutions Limited</a></p>
               </div>
             </div>
           </div>
