--- a/index.html
+++ b/index.html
@@ -21,40 +21,6 @@
 
 
 <body>
-  <!-- header top area start -->
-  <!-- <div class="header-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center">
-          <div class="contact-info">
-            <ul class="list-unstyled">
-              <li><a href="mailto:info@example.com"><i class="fas fa-envelope"></i> info@example.com</a></li>
-              <li><a href="tel:1-888-452-1505"><i class="fas fa-phone-alt"></i> 1-888-452-1505</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-6 align-self-center">
-          <div class="d-flex align-items-center justify-content-end">
-            <div class="social-icon text-end">
-              <ul class="list-unstyled">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-              </ul>
-            </div>
-            <div class="header_search">
-              <div class="input_groups position-relative">
-                <input type="text" placeholder="Search">
-                <button class="search_bar"><i class="fa fa-search"></i></button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- header top area end -->
   <!-- header area start -->
   <header class="header_area">
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
@@ -89,7 +55,7 @@
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-search" style="font-size: 15px;"></i></a>
+              <a class="nav-link" href="search.html"><i class="fas fa-search" style="font-size: 15px;"></i></a>
             </li>
           </ul>
         </div>
@@ -320,25 +286,29 @@
             <div class="row justify-content-center">
               <div class="col-4 px-0">
                 <a class="image" href="#">
-                  <img src="./images/pr-1.jpg" alt="farooq">
+                  <img src="./images/area1.jpg" alt="farooq">
                   <div class="overly">
-                    <h3>towhid</h3>
+                    <h3>
+                      <span>
+                        Structured and Project Finance
+                      </span>
+                    </h3>
                   </div>
                 </a>
               </div>
               <div class="col-2 px-0">
                 <a class="image" href="#">
-                  <img src="./images/pr-2.jpg" alt="farooq">
+                  <img src="./images/area2.jpg" alt="farooq">
                   <div class="overly">
-                    <h3>towhid</h3>
+                    <h3><span>Regulatory Affairs of Public Bodies</span></h3>
                   </div>
                 </a>
               </div>
               <div class="col-2 px-0">
                 <a class="image" href="#">
-                  <img src="./images/pr-3.jpg" alt="farooq">
+                  <img src="./images/area3.jpg" alt="farooq">
                   <div class="overly">
-                    <h3>towhid</h3>
+                      <h3><span>Intellectual Property</span></h3>
                   </div>
                 </a>
               </div>
@@ -346,25 +316,25 @@
             <div class="row justify-content-center">
               <div class="col-2 px-0">
                 <a class="image" href="#">
-                  <img src="./images/pr-2.jpg" alt="farooq">
+                  <img src="./images/area4.png" alt="farooq">
                   <div class="overly">
-                    <h3>towhid</h3>
+                      <h3><span>Insolvency and Debt Recovery</span></h3>
                   </div>
                 </a>
               </div>
               <div class="col-2 px-0">
                 <a class="image" href="#">
-                  <img src="./images/pr-3.jpg" alt="farooq">
+                  <img src="./images/area5.jpg" alt="farooq">
                   <div class="overly">
-                    <h3>towhid</h3>
+                      <h3><span>Shipping and Maritime</span></h3>
                   </div>
                 </a>
               </div>
               <div class="col-4 px-0">
                 <a class="image" href="#">
-                  <img src="./images/pr-1.jpg" alt="farooq">
+                  <img src="./images/area6.jpg" alt="farooq">
                   <div class="overly">
-                    <h3>towhid</h3>
+                      <h3><span>Litigation, Arbitration & Dispute Settlement</span></h3>
                   </div>
                 </a>
               </div>
@@ -377,6 +347,25 @@
       <!-- </div> -->
     </section>
     <!-- practice area end -->
+    <!-- foreign investment area start -->
+    <section class="foreign_investment_area" style="background: url(./images/foreign-investment.jpg) no-repeat top right;">
+      <!-- <div class="container"> -->
+       
+      <div class="row justify-content-center">
+        <div class="col-lg-4">
+          <div class="text">
+            <h3 class="title text-center">Foreign Investment – an area of expertise and a social endeavour</h3>
+            <p class="text-center">Bangladesh, a developing country and an emerging economy with promising potential, attracts a notable amount of foreign investment, however, with the existing, often unwieldy, regulatory environment, foreign investors regularly find themselves in precarious situations through which they have to navigate their investments.</p>
+            <div class="mt-30 text-center">
+              <a href="founder-message.html" class="common_btn">View More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+        
+      <!-- </div> -->
+    </section>
+    <!-- foreign investment area end -->
     <!-- projects area start -->
     <section class="projects_area">
       <div class="container">
@@ -465,7 +454,7 @@
                     courts, intuitively and accurately...</p>
                   <div class="mt-30">
                     <a href="founder-message.html" class="common_btn">View More</a>
-                    <a href="people.html" class="common_btn ms-3">Meet Our People</a>
+                    <a href="people.html" class="common_btn bg-cng ms-3">Meet Our People</a>
                   </div>
                 </div>
               </div>
@@ -574,7 +563,7 @@
             <div class="col-lg-12 align-self-center">
               <div class="copyright-text text-center">
                 <p>Copyright © 2024 | Farooq & Associates </p>
-                <p class="mt-2">Powered by <a href="#">Boomerang Digital</a></p>
+                <p class="mt-2">Powered by <a href="#">Nogor Solutions Limited</a></p>
               </div>
             </div>
           </div>
