--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-search" style="font-size: 15px;"></i></a>
+              <a class="nav-link" href="search.html"><i class="fas fa-search" style="font-size: 15px;"></i></a>
             </li>
           </ul>
         </div>
