--- a/areas-of-practice.html
+++ b/areas-of-practice.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-search" style="font-size: 15px;"></i></a>
+              <a class="nav-link" href="search.html"><i class="fas fa-search" style="font-size: 15px;"></i></a>
             </li>
           </ul>
         </div>
